Changes done. Lets go